<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/card_view_translucent_grey"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:cardCornerRadius="8dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/artist_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_number"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/artist_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@+id/artist_number"
            app:layout_constraintStart_toEndOf="@+id/artist_number"/>

        <TextView
            android:id="@+id/artist_listeners"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_listeners"
            android:layout_marginTop="5sp"
            app:layout_constraintTop_toBottomOf="@+id/artist_number"
            app:layout_constraintStart_toStartOf="@+id/artist_number"/>

        <TextView
            android:id="@+id/artist_listeners_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/artist_listeners_number"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10sp"
            app:layout_constraintTop_toTopOf="@+id/artist_listeners"
            app:layout_constraintStart_toEndOf="@+id/artist_listeners"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>